# VulkanSetup

./: .gitignore  CMakeLists.txt  MainClean.cpp  README.md  auto-vulkan-setup.bat
src/: Main.cpp
src/Shaders/: frag.spv  runtime_compile.bat  triangle.frag  triangle.vert  vert.spv
